下一步editor 完整版

--- a/web/assets/store/css/diy.css
+++ b/web/assets/store/css/diy.css
@@ -824,4 +824,8 @@
 .work-diy .diy-editor .form-item-add:hover {
   background: #f9f9f9; }
 
+.work-diy .diy-editor .form-items .item-image img{
+  width: 100%;
+}
+
 /*# sourceMappingURL=diy.css.map */
